# FastTA-ETP-ITC2007

./: README.md
FastTA-ITC2007/: CMakeLists.txt  QT_Project_README_Nuno.txt  cmd_line.txt
FastTA-ITC2007/exes/: CMakeLists.txt  TestSO.cpp
FastTA-ITC2007/lib/: CMakeLists.txt  MainAppITC2007Datasets.cpp
FastTA-ITC2007/lib/algorithms/eo/: Crossover.h  Mutation.h  eoCellularEA.h  eoEvolutionOperator.h  eoSCEA.h
FastTA-ITC2007/lib/algorithms/mo/: moGDAexplorer.h  moSA.h  moSAexplorer.h  moTAexplorer.h
FastTA-ITC2007/lib/algorithms/mo/statistics/: moTAWithStatistics.h  moTAexplorerWithStatistics.h  moTAexplorerWithStatisticsOpt.h
FastTA-ITC2007/lib/chromosome/: eoChromosome.cpp  eoChromosome.h
FastTA-ITC2007/lib/data/: Period.h  ScheduledRoom.h  TimetableProblemData.hpp
FastTA-ITC2007/lib/graphColouring/: GraphColouringHeuristics.h
FastTA-ITC2007/lib/init/: ETTPInit.h
FastTA-ITC2007/lib/kempeChain/: ETTPKempeChain.h  ETTPKempeChainHeuristic.h
FastTA-ITC2007/lib/kempeChain/statistics/: ETTPKempeChainHeuristicWithStatistics.h
FastTA-ITC2007/lib/neighbourhood/: ETTPNeighborhoodExplorer.h  ETTPneighbor.h  ETTPneighborhood.h
FastTA-ITC2007/lib/neighbourhood/statistics/: ETTPneighborEvalNumEvalsCounter.h  ETTPneighborEvalWithStatistics.h  ETTPneighborEvalWithStatisticsNumberEvalsCounter.h  ETTPneighborWithStatistics.h  ETTPneighborhoodWithStatistics.h
FastTA-ITC2007/lib/statistics/: ExamMoveStatistics.cpp  ExamMoveStatistics.h
FastTA-ITC2007/lib/statistics/optimised/: ExamMoveStatisticsOpt.cpp  ExamMoveStatisticsOpt.h
FastTA-ITC2007/lib/testset/: ITC2007TestSet.cpp
FastTA-ITC2007/lib/utils/: CurrentDateTime.cpp  Utils.cpp
FastTA-ITC2007/lib/validator/: validator.cc  validator.h
RUNS/FastTA100-AutoRate/Run1/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run10/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run2/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run3/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run4/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run5/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run6/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run7/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run8/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100-AutoRate/Run9/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run1/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run10/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run2/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run3/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run4/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run5/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run6/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run7/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run8/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA100/Run9/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run1/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run10/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run2/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run3/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run4/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run5/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run6/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run7/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run8/: set1.sln  set10.sln  set11.sln  set12.sln  set2.sln  set3.sln  set4.sln  set5.sln  set6.sln  set7.sln  set8.sln  set9.sln
RUNS/FastTA80/Run9/: set1.sln  set10.sln  (+10 more)
(+123 files in other folders)
